{
  "version": 4,
  "terraform_version": "0.14.10",
  "serial": 1041,
  "lineage": "c552cabc-4b96-a1b3-b6a9-aacdf002f9bb",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-71a80f4c",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-123-239-221.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.239.221",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_backserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f7491af5eef733a",
            "arn": "arn:aws:ec2:eu-central-1:882964249017:instance/i-043265e41bf580d2c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-043265e41bf580d2c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-020fc3a7480082e84",
            "private_dns": "ip-10-0-0-20.eu-central-1.compute.internal",
            "private_ip": "10.0.0.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06bb514f53039f9ff",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09a837835c07a3a99",
            "tags": {
              "Name": "private-instance"
            },
            "tags_all": {
              "Name": "private-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc6cb22ac54ed099"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.my_frontserver",
            "module.ec2_instance.aws_subnet.private-subnet",
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_frontserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f7491af5eef733a",
            "arn": "arn:aws:ec2:eu-central-1:882964249017:instance/i-066727dec926d2276",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-066727dec926d2276",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykeypair-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02577b41122b7c446",
            "private_dns": "ip-10-0-0-7.eu-central-1.compute.internal",
            "private_ip": "10.0.0.7",
            "public_ip": "3.67.83.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aab92c6633ce7982",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08509bffb50be2468",
            "tags": {
              "Name": "bastion-instance"
            },
            "tags_all": {
              "Name": "bastion-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dc6cb22ac54ed099"
            ]
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.my_frontserver",
            "module.ec2_instance.aws_subnet.public-subnet",
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882964249017:internet-gateway/igw-0476749a13d98598d",
            "id": "igw-0476749a13d98598d",
            "owner_id": "882964249017",
            "tags": {
              "Name": "internet-gw"
            },
            "tags_all": {
              "Name": "internet-gw"
            },
            "vpc_id": "vpc-08480cea8682f322f"
          },
          "dependencies": [
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-71a80f4c",
            "id": "nat-0ca397d1ef0ff0bef",
            "network_interface_id": "eni-03a444f2f48efc300",
            "private_ip": "10.0.0.4",
            "public_ip": "3.123.239.221",
            "subnet_id": "subnet-08509bffb50be2468"
          },
          "dependencies": [
            "module.ec2_instance.aws_eip.nat",
            "module.ec2_instance.aws_internet_gateway.internet-gw",
            "module.ec2_instance.aws_subnet.public-subnet",
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882964249017:route-table/rtb-0db5c9fa24adb62f6",
            "id": "rtb-0db5c9fa24adb62f6",
            "owner_id": "882964249017",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ca397d1ef0ff0bef",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-08480cea8682f322f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_eip.nat",
            "module.ec2_instance.aws_internet_gateway.internet-gw",
            "module.ec2_instance.aws_nat_gateway.nat-gw",
            "module.ec2_instance.aws_subnet.public-subnet",
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882964249017:route-table/rtb-072716edcf5bf577e",
            "id": "rtb-072716edcf5bf577e",
            "owner_id": "882964249017",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0476749a13d98598d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-08480cea8682f322f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_internet_gateway.internet-gw",
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db48f29b5b9275b6",
            "route_table_id": "rtb-0db5c9fa24adb62f6",
            "subnet_id": "subnet-09a837835c07a3a99"
          },
          "dependencies": [
            "module.ec2_instance.aws_eip.nat",
            "module.ec2_instance.aws_internet_gateway.internet-gw",
            "module.ec2_instance.aws_nat_gateway.nat-gw",
            "module.ec2_instance.aws_route_table.private-rt",
            "module.ec2_instance.aws_subnet.private-subnet",
            "module.ec2_instance.aws_subnet.public-subnet",
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0076a6baa0f3172be",
            "route_table_id": "rtb-072716edcf5bf577e",
            "subnet_id": "subnet-08509bffb50be2468"
          },
          "dependencies": [
            "module.ec2_instance.aws_internet_gateway.internet-gw",
            "module.ec2_instance.aws_route_table.public-rt",
            "module.ec2_instance.aws_subnet.public-subnet",
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_frontserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882964249017:security-group/sg-0dc6cb22ac54ed099",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc6cb22ac54ed099",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "WebServer Security Group",
            "name_prefix": "",
            "owner_id": "882964249017",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08480cea8682f322f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882964249017:subnet/subnet-09a837835c07a3a99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.16/28",
            "id": "subnet-09a837835c07a3a99",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "882964249017",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-08480cea8682f322f"
          },
          "dependencies": [
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882964249017:subnet/subnet-08509bffb50be2468",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/28",
            "id": "subnet-08509bffb50be2468",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "882964249017",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-08480cea8682f322f"
          },
          "dependencies": [
            "module.ec2_instance.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:882964249017:vpc/vpc-08480cea8682f322f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/27",
            "default_network_acl_id": "acl-089528eccc25042a0",
            "default_route_table_id": "rtb-04c566b06ee19a7ae",
            "default_security_group_id": "sg-01d482d8d2bd76746",
            "dhcp_options_id": "dopt-1b168a71",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08480cea8682f322f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04c566b06ee19a7ae",
            "owner_id": "882964249017"
          }
        }
      ]
    }
  ]
}